[tool.poetry]
name = "ya-direct"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ya_direct"}]

[tool.poetry.dependencies]
python = "^3.10"
tortilla = { git = "https://github.com/Teu5us/tortilla.git" }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
